--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -1,5 +1,9 @@
 /* Фото картинки */
 
+.catalog {
+  background-color: var(--just-white);
+}
+
 .poster-list__img,
 .poster-lib__img {
   border-radius: inherit;
