--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,19 +1,21 @@
 .footer {
   text-align: center;
-  background-color: #f7f7f7;
-  width: 100%;
+  max-width: 320px;
+  @include mq(tablet) {
+    max-width: 768px;
+  }
+  @include mq(desktop) {
+    max-width: 1280px;
+  }
   padding: 30px;
-  
-
-  color: #545454;
   font-size: 16px;
   line-height: 1.19;
+  background-color: #f7f7f7;
+  color: #545454;
 }
-
 .footer__icon_logo {
   animation: heartbeat 1250ms cubic-bezier(.25, .1, .25, 1) infinite;
 }
-
 .footer a {
   text-decoration: underline;
   color: #545454;
