--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,38 +1,33 @@
-// .header {
-//   padding-top: 1px;
-// }
-
 .header__seaction_home {
   background-color: #000000;
-  //background-image: url(/src/images/abstract-background-with-red-lines-mobile.jpg);
+  // background-image: url(/src/images/abstract-background-with-red-lines-mobile.jpg);
   background-image: url(/src/images/photo_2022-07-20_17-13-30-mobile.jpg);
   //background-image: url(/src/images/photo_2022-07-20_19-17-08-mob.jpg);
   @include mq(tablet) {
     // background-image: url(/src/images/abstract-background-with-red-lines-tablet.jpg);
     background-image: url(/src/images/photo_2022-07-20_17-13-30-tablet.jpg);
     //background-image: url(/src/images/photo_2022-07-20_19-17-08-tab.jpg);
-    margin-left: 21px;
-    margin-right: 15px;
+    max-width: 768px;
+    // margin-left: 21px;
+    // margin-right: 15px;
   }
   @include mq(desktop) {
-    //background-image: url(/src/images/abstract-background-with-red-lines-desktop.jpg);
+    // background-image: url(/src/images/abstract-background-with-red-lines-desktop.jpg);
     background-image: url(/src/images/photo_2022-07-20_17-13-30-desktop.jpg);
     //background-image: url(/src/images/photo_2022-07-20_19-17-08-desk.jpg);
+    max-width: 1280px;
     padding-bottom: 80px;
-    margin-right: auto;
-  margin-left: auto;
   }
   background-repeat: no-repeat;
   background-size: cover;
   flex-grow: 1;
-  max-width: 1280px;
-  margin-right: 10px;
-  margin-left: 10px;
+  max-width: 320px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 30px;
   //padding-bottom: 92px; //
   padding-bottom: 112px;
   text-align: center;
-  border-radius: 0 0 15px 15px;
 }
 .header__seaction_library {
   background-color: #000000;
@@ -43,7 +38,7 @@
   }
   @include mq(desktop) {
     background-image: url(/src/images/abstract-background-with-red-lines-library-desktop.jpg);
-    max-height: 204px;
+    max-height: 194px;
     padding-bottom: 80px;
   }
   background-repeat: no-repeat;
@@ -56,7 +51,6 @@
   padding-top: 40px;
   padding-bottom: 92px;
   text-align: center;
-  border-radius: 15px;
 }
 .header__container {
   position: relative;
@@ -91,7 +85,9 @@
 }
 .header__icon_logo {
   animation: animate360 3000ms cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+  stroke-width: 3px;
   stroke: var(--just-white);
+  fill: transparent;
 }
 .header__nav {
 	padding-top: 5px;
