--- a/src/partials/modal-log-in.html
+++ b/src/partials/modal-log-in.html
@@ -1,8 +1,10 @@
 <div class="backdrop_login is-hidden" data-modal-login>
     <div class="modal_login">
         <button type="button" class="modal_login__button" data-modal-close>
-            <svg class="modal_login__button_icon" width="18" height="18">
-                <use href="./images/sprite/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-x-lg"
+                viewBox="0 0 16 16">
+                <path
+                    d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
             </svg>
         </button>
         <form class="modal_login__form">
