--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -26,17 +26,15 @@ body {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.33;
-  background-image: url(/src/images/grid.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  // flex-grow: 1;
-  // overflow: hidden;
-  // background-color: #000000;
-  // color: var(--primary-text-color);
-  // background-color: var(--light-body-theme);
+  color: var(--primary-text-color);
+  background-color: var(--light-body-theme);
+  @include mq(desktop) {
+    background-image: url(/src/images/catalog/movies-teaser-compilation.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 }
-
 body.modal-open {
 	::-webkit-scrollbar {
 		width: 20;
@@ -53,29 +51,32 @@ body.modal-open {
 		border: 5px solid var(--backdrop-mobail-modal);
 	}
 }
-
+body.dark.modal-open {
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--bisquit-color);
+    border: 5px solid var(--dark-body-theme);
+  }
+}
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-
 li {
   list-style: none;
 }
-
 //Скрол
 // ::-webkit-scrollbar {
 //   width: 20;
 // }
 // ::-webkit-scrollbar-track {
-//   background: var(--light-body-theme);
+//  background: var(--light-body-theme);
 // 	margin-block: 10px;
 // 	border-radius: 10px;
 // 	opacity: 0;
 // }
 // ::-webkit-scrollbar-thumb {
-//   background: grey;
+//  background: grey;
 // 	border-radius: 10px;
 // 	border: 5px solid var(--light-body-theme);
 // }
