--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -2,17 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
   width: 100%;
   height: 100%;
   // overflow: hidden;
-
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-backdrop.modal-open {
   pointer-events: all;
   opacity: 1;
@@ -26,7 +23,6 @@
   height: 100%;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal {
   background-color: var(--background-modal);
   // min-width: 280px;
@@ -36,7 +32,6 @@
   position: relative;
   margin: auto;
   border-radius: 15px;
-
   @include mq(tablet) {
     max-width: 704px;
     padding: 20px;
@@ -44,7 +39,6 @@
     grid-template-columns: 264px 1fr;
     grid-column-gap: 68px;
   }
-
   @include mq(desktop) {
     max-width: 806px;
     padding: 20px 20px;
@@ -53,27 +47,32 @@
     grid-column-gap: 16px;
   }
 }
-
 .btn__closs-modal {
-  width: 30px;
-  height: 30px;
   position: absolute;
   top: 8px;
   right: 8px;
-  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
-  border: none;
+  color: var(--modal-darck-text);
+  background: var(--just-white);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: var(--acent-modal);
+    transform: scale(1.15);
+    color: var(--secondary-text-color);
+    box-shadow: 0px 8px 43px var(--secondary-text-color);
+    border: 1px solid var(--secondary-text-color);
   }
 }
-
 .modal__movi-poster {
   max-width: 360px;
   position: relative;
-
   @include mq(tablet) {
     width: 300px;
 		height: 450px;
@@ -86,7 +85,6 @@
     // object-fit: cover;
   }
 }
-
 .modal > .modal__movi-poster > img {
   margin-left: auto;
   display: block;
@@ -101,37 +99,29 @@
     object-fit: fill;
   }
 }
-
 .modal_movi-info {
 	margin-top: 30px
 }
-
 .modal__title {
   margin-bottom: 20px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.15;
-
   text-align: center;
-
   @include mq(desktop) {
     font-weight: 500;
     font-size: 30px;
     line-height: 1.07;
   }
 }
-
 .modal__info-card {
   margin-bottom: 20px;
 }
-
 .modal__about {
   margin-bottom: 20px;
 }
-
 .modal__about-title {
   margin-bottom: 8px;
-
   font-weight: 500;
   font-size: 12px;
   line-height: 1.67;
@@ -140,13 +130,11 @@
     line-height: 1.33;
   }
 }
-
 .modal__about-text {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.67;
 }
-
 .modal.dark::-webkit-scrollbar {
   width: 12px;
 }
@@ -158,35 +146,28 @@
   background: bisque;
   border-radius: 8px;
 }
-
 .info-card__list-parametrs {
   display: grid;
   grid-template-columns: 108px 2fr;
 }
-
 .info-card__item-point {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   color: var(--modal-darck-text);
 }
-
 .info-card__item-paramter {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
-
   color: var(--infofilm-paramt-text);
 }
-
 .orig-title {
   min-height: 100%;
 }
-
 .info-card__list-parametrs > li:not(:nth-last-of-type(-n + 2)) {
   margin-bottom: 8px;
 }
-
 .info-card__list-parametrs > li > span:first-child {
   display: inline-block;
   width: 30px;
@@ -196,17 +177,14 @@
   text-align: center;
   border-radius: 7px;
 }
-
 .info-card__list-parametrs > li > span {
   display: inline-block;
   text-align: center;
   color: var(--infofilm-paramt-text);
-
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
 }
-
 .info-card__list-parametrs > li > span:last-child {
   display: inline-block;
   width: 36px;
@@ -216,7 +194,6 @@
   text-align: center;
   border-radius: 2px;
 }
-
 .modal__buttons {
   display: flex;
   justify-content: space-evenly;
@@ -225,7 +202,6 @@
     padding-left: 8px;
   }
 }
-
 .modal__add-queue[data-queue='true'] {
   content: 'remove';
   font-weight: 500;
@@ -235,7 +211,6 @@
   text-transform: uppercase;
   background-color: var(--acent-modal);
   color: var(--modal-light-text);
-
   cursor: pointer;
   width: 110px;
   height: 44px;
@@ -256,7 +231,6 @@
     width: 136px;
   }
 }
-
 .modal__add-queue[data-queue='false'] {
   font-weight: 500;
   font-size: 12px;
@@ -265,7 +239,6 @@
   text-transform: uppercase;
   background-color: var(--modal-light-btn-bgr);
   color: var(--modal-darck-text);
-
   cursor: pointer;
   width: 110px;
   height: 44px;
@@ -287,7 +260,6 @@
     width: 136px;
   }
 }
-
 .modal__add-watched[data-watched='true'] {
   color: var(--modal-light-text);
   font-weight: 500;
@@ -296,7 +268,6 @@
   text-align: center;
   text-transform: uppercase;
   background-color: var(--acent-modal);
-
   cursor: pointer;
   width: 110px;
   height: 44px;
@@ -318,7 +289,6 @@
     width: 136px;
   }
 }
-
 .modal__add-watched[data-watched='false'] {
   font-weight: 500;
   font-size: 12px;
@@ -327,14 +297,12 @@
   text-transform: uppercase;
   background-color: var(--modal-light-btn-bgr);
   color: var(--modal-darck-text);
-
   cursor: pointer;
   width: 110px;
   height: 44px;
   border-radius: 5px;
   border: 1px var(--modal-darck-text) solid;
   padding: 6px 27px;
-
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
@@ -351,7 +319,6 @@
     width: 136px;
   }
 }
-
 .modal__add-watched[disabled='true'],
 .modal__add-queue[disabled='true'] {
   cursor: auto;
@@ -368,14 +335,12 @@
     box-shadow: none;
   }
 }
-
 //Стили кнопки и плеера трейлера
 #ytplayer {
   width: 100%;
   height: 360px;
   margin-top: 20px;
   border-radius: 4px;
-
   @include mq(tablet) {
     width: 664px;
     height: 370px;
@@ -386,7 +351,6 @@
     margin-top: 16px;
   }
 }
-
 .trailerBtn {
   cursor: pointer;
   width: 300px;
@@ -407,7 +371,6 @@
     &::before {
       transform: translate3d(0, 0.5em, -1em);
     }
-
     &:active {
       transform: translate3d(0, 1em, -1em);
       &::before {
@@ -423,13 +386,11 @@
   flex-direction: column;
   align-items: center;
 }
-
 .trailer-placeholder {
   width: 100%;
   height: 360px;
   margin-top: 20px;
   border-radius: 4px;
-
   @include mq(tablet) {
     width: 632px;
     height: 425px;
@@ -445,42 +406,34 @@
   border: none;
   background-image: url('/src/images/404-not-found.png');
 }
-//--------------------------------------------
-//--------------------------------------------
-// D A R K - T H E M
 .modal.modal-dark {
   background-color: var(--modal-dark-them-bcg);
 }
-
+.modal.modal-dark .btn__closs-modal {
+  background-color: var(--bisquit-color);
+}
 .modal.modal-dark > div > h2 {
   color: var(--modal-dark-them-text);
 }
-
 .modal.modal-dark > div > div > ul > .info-card__item-point {
   color: var(--modal-dark-them-text);
 }
-
 .modal.modal-dark > div > div > ul > .info-card__item-point > span:first-child {
   background-color: var(--modal-dark-them-acent);
 }
-
 .modal.modal-dark > div > div > ul > .info-card__item-point > span:last-child {
   background-color: #ffffff1f;
   color: var(--modal-dark-them-text);
 }
-
 .modal.modal-dark > div > div > ul > .info-card__item-paramter {
   color: var(--modal-dark-them-text-acent);
 }
-
 .modal.modal-dark > div > div > h3 {
   color: var(--modal-dark-them-text);
 }
-
 .modal.modal-dark > div > div > p {
   color: var(--modal-dark-them-text);
 }
-
 .modal.modal-dark > div > div > button {
   background-color: var(--modal-dark-them-text-acent);
   color: #050505;
@@ -490,7 +443,6 @@
     color: #050505;
   }
 }
-
 .modal.modal-dark > div > div > button[data-watched='true'],
 .modal.modal-dark > div > div > button[data-queue='true'] {
   background-color: var(--modal-dark-them-acent);
@@ -501,7 +453,6 @@
     color: #050505;
   }
 }
-
 .modal.modal-dark > div > div > button[disabled='true'] {
   cursor: auto;
   background-color: #b4b4b4;
@@ -517,7 +468,6 @@
     box-shadow: none;
   }
 }
-
 .modal.modal-dark > div > div > .trailerBtn {
   background-color: transparent;
   transition: all 0.15s, box-shadow 0.15s;
