--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -1,74 +1,82 @@
 .team-modal {
-  background-color: var(--background-modal);
+  position: relative;
   width: 320px;
   padding: 48px 20px 0px;
-  margin-bottom: 50px;
-  position: relative;
   margin: auto;
+  margin-bottom: 50px;
   border-radius: 15px;
+  background-color: var(--background-modal);
   @include mq(tablet) {
     width: 700px;
   }
-
   @include mq(desktop) {
     width: 1000px;
   }
 }
-
+.team-modal__title {
+  font-size: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+  cursor: pointer;
+  color: var(--secondary-text-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    transform: scale(1.15);
+  }
+}
 .team-modal__list {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  // display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(11, 1fr);
-  // grid-column-gap: 25px;
-  // grid-row-gap: 20px;
-
   @include mq(tablet) {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
   }
-
   @include mq(desktop) {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
   }
 }
-
 .team-modal__item {
   width: 200px;
   margin-bottom: 25px;
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    transform: scale(1.15);
+  }
 }
-
 .team-modal__item div {
   display: flex;
   justify-content: center;
 }
-
 .team-modal__pic {
   min-width: 100%;
   border-radius: 50%;
 }
-
 .team-modal__name {
   text-align: center;
   margin-top: 10px;
 }
-
 .team-modal__role {
   text-align: center;
   font-size: 16px;
+  color: var(--secondary-text-color);
 }
-
 .team-modal__link {
   width: 30px;
 }
-
-.team-modal__title {
-  font-size: 30px;
-  margin-bottom: 30px;
-  text-align: center;
+.dark .team-modal {
+  background-color: var(--modal-dark-them-bcg);
+}
+.dark .btn__closs-modal {
+  background-color: var(--bisquit-color);
+}
+.dark .team-modal__name {
+  color: var(--bisquit-color);
 }
