--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -1,7 +1,9 @@
 /* Фото картинки */
 
 .catalog {
-  background-color: var(--just-white);
+  @include mq(desktop) {
+    background-color: var(--light-body-theme);
+  }
 }
 
 .poster-list__img,
@@ -182,13 +184,11 @@
   background-color: var(--secondary-text-color);
   color: var(--just-white);
 }
-
 .btn-to-top--visible {
   right: calc(2.5%);
   opacity: 1;
   visibility: visible;
 }
-
 .icon-to-top {
   display: inline-block;
   width: 1.5em;
@@ -197,7 +197,6 @@
   stroke: currentColor;
   fill: currentColor;
 }
-
 .to_main__div {
   display: flex;
   justify-content: center;
@@ -205,7 +204,6 @@
   flex-direction: column;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .to_main__text {
   cursor: pointer;
   font-size: 30px;
@@ -218,11 +216,9 @@
     transform: scale(1.05);
   }
 }
-
 .to_main__icon {
   fill: currentColor;
 }
-
 .to_main__link {
   display: inline-block;
   padding-top: 10px;
@@ -241,7 +237,6 @@
   border: 1px solid var(--secondary-text-color);
   border-radius: 5px;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   &:focus,
   &:hover {
     background-color: var(--secondary-text-color);
