--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,51 +1,42 @@
 .header__seaction_home {
   background-color: #000000;
-  // background-image: url(/src/images/abstract-background-with-red-lines-mobile.jpg);
-  background-image: url(/src/images/photo_2022-07-20_17-13-30-mobile.jpg);
-  //background-image: url(/src/images/photo_2022-07-20_19-17-08-mob.jpg);
+  background-image: url(/src/images/header/photo_2022-07-20_17-13-30-mobile.jpg);
   @include mq(tablet) {
-    // background-image: url(/src/images/abstract-background-with-red-lines-tablet.jpg);
-    background-image: url(/src/images/photo_2022-07-20_17-13-30-tablet.jpg);
-    //background-image: url(/src/images/photo_2022-07-20_19-17-08-tab.jpg);
+    background-image: url(/src/images/header/photo_2022-07-20_17-13-30-tablet.jpg);
     max-width: 768px;
-    // margin-left: 21px;
-    // margin-right: 15px;
+    padding-bottom: 140px;
   }
   @include mq(desktop) {
-    // background-image: url(/src/images/abstract-background-with-red-lines-desktop.jpg);
-    background-image: url(/src/images/photo_2022-07-20_17-13-30-desktop.jpg);
-    //background-image: url(/src/images/photo_2022-07-20_19-17-08-desk.jpg);
+    background-image: url(/src/images/header/photo_2022-07-20_17-13-30-desktop.jpg);
+    max-width: 1280px;
+    
+  }
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 320px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 40px;
+  padding-bottom: 210px;
+  text-align: center;
+}
+.header__seaction_library {
+  background-color: #000000;
+  background-image: url(/src/images/header/abstract-background-with-red-lines-library-desktop.jpg);
+  @include mq(tablet) {
+    background-image: url(/src/images/header/abstract-background-with-red-lines-library-tablet.jpg);
+    max-width: 768px;
+    height: 215px;
+  }
+  @include mq(desktop) {
+    background-image: url(/src/images/header/abstract-background-with-red-lines-library-desktop.jpg);
     max-width: 1280px;
     padding-bottom: 80px;
   }
   background-repeat: no-repeat;
   background-size: cover;
-  flex-grow: 1;
   max-width: 320px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: 30px;
-  //padding-bottom: 92px; //
-  padding-bottom: 112px;
-  text-align: center;
-}
-.header__seaction_library {
-  background-color: #000000;
-  background-image: url(/src/images/abstract-background-with-red-lines-library-desktop.jpg);
-  @include mq(tablet) {
-    background-image: url(/src/images/abstract-background-with-red-lines-library-tablet.jpg);
-    max-height: 236px;
-  }
-  @include mq(desktop) {
-    background-image: url(/src/images/abstract-background-with-red-lines-library-desktop.jpg);
-    max-height: 194px;
-    padding-bottom: 80px;
-  }
-  background-repeat: no-repeat;
-  background-size: cover;
-  flex-grow: 1;
-  max-width: 1280px;
-  max-height: 249px;
+  height: 274px;
   margin-right: auto;
   margin-left: auto;
   padding-top: 40px;
@@ -56,6 +47,7 @@
   position: relative;
 }
 .header__div {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,7 +58,7 @@
   align-items: center;
   margin-right: auto;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     transform: scale(1.15);
@@ -86,10 +78,11 @@
 .header__icon_logo {
   animation: animate360 3000ms cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
   stroke-width: 3px;
-  stroke: var(--just-white);
+  stroke: var(--primary-current-color);
   fill: transparent;
 }
 .header__nav {
+  position: relative;
 	padding-top: 5px;
 }
 .header__name {
@@ -173,18 +166,19 @@
   padding-bottom: 0.5px;
 }
 .header__search-form {
-  position: relative;
+  position: absolute;
+  top: 74px;
   display: inline-flex;
   justify-content: center;
-  padding-top: 30px;
-	padding-bottom: 40px;
-  @include mq(tablet) {
-  padding-top: 30px;
-	padding-bottom: 0px;
-  }
-	@include mq(desktop) {
-		padding-bottom: 0px;
-	}
+  // padding-top: 30px;
+	// padding-bottom: 40px;
+  // @include mq(tablet) {
+  // padding-top: 30px;
+	// padding-bottom: 0px;
+  // }
+	// @include mq(desktop) {
+	// 	padding-bottom: 0px;
+	// }
 }
 .header__input {
   width: 250px;
@@ -217,13 +211,10 @@
 .header__search-button {
   position: absolute;
   right: -2px;
-  bottom: 40px;
+  bottom: 0px;
   cursor: pointer;
   background-color: transparent;
   border: none;
-	@include mq(tablet) {
-		bottom: 0px;
-	}
 }
 .header__search-icon {
   fill: transparent;
@@ -306,19 +297,13 @@
 }
 .filter_form {
   position: absolute;
-  font-size: 13px;
-  right: 70px;
-  bottom: -80%;
+  top: 105px;
 	display: flex;
 	flex-direction: column;
+  text-align: center;
+  font-size: 13px;
   @include mq(tablet) {
-    right: 167px;
-    bottom: -50%;
-		display: block;
-  }
-  @include mq(desktop) {
-    right: 433px;
-    bottom: -50%;
+	display: block;
   }
 }
 .filter_form__select {
@@ -327,13 +312,12 @@
       margin-top: 10px;
     }
   }
-  border: 0px;
+  outline: none;
+  border: none;
   border-bottom: 1px solid var(--just-white);
   color: var(--just-white);
-  border-radius: 0px;
-  outline: none;
   background-color: inherit;
-  padding: 2px;
+  padding: 1px;
 }
 .filter_form__select > option {
   background-color: #272e34;
@@ -349,22 +333,43 @@
   background-color: var(--secondary-text-color);
 }
 .btnResetFilter {
-  // margin-left: 40px;
-	margin-top: 5px;
-	text-align: start;
-	width: 130px;
-  border: 0px;
+  margin: 0 auto;
+  width: 45px;
+  outline: none;
+  border: none;
   border-bottom: 1px solid var(--just-white);
   color: var(--just-white);
-  border-radius: 0px;
-  outline: none;
   background-color: inherit;
   cursor: pointer;
-	@include mq(tablet) {
-		width: 45px;
-		text-align: center;
-	}
-	@include mq(desktop) {
-		
-	}
+  text-align: center;
+}
+#toggle-theme-image {
+  fill: var(--sun-color, #ffffff);
+  width: 22px;
+  height: 22px;
+}
+.toggle-theme-btn,
+.toggle-theme-btn-for-library {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  &:hover {
+    cursor: pointer;
+  }
+}
+.toggle-theme-btn {
+  top: 185px;
+  right: 10px;
+  @include mq(tablet) {
+    top: 95px;
+    right: 30px;
+  }
+}
+.toggle-theme-btn-for-library {
+    top: 155px;
+    right: 120px;
+    @include mq(tablet) {
+      top: 85px;
+      right: 70px;
+    }
 }
