--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -22,6 +22,7 @@
   height: 240px;
   // ❗️❗️❗️ The path to images from a SASS file
   // is always the same as from the css folder.
+  // See it in the main folder.
   background-image: url('../images/logo.png');
   background-size: cover;
   background-position: center;
