--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @import './layout/catalog';
 @import './layout/footer';
 @import './components/spiner.scss';
-@import './components/backdrop'; // @import './partials/catalog';
+@import './components/backdrop'; 
 
+// @import './partials/catalog';
 // @import './example';
