--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -37,4 +37,5 @@ img {
 :root {
   --primary-text-color: #000000;
   --secondary-text-color: #ff6b08;
-}/*# sourceMappingURL=index.css.map */
+}
+/*# sourceMappingURL=index.css.map */
