--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -356,7 +356,7 @@
   width: 300px;
   height: 100px;
   background-color: transparent;
-  background-image: url('../images/trailerBtn.png');
+  background-image: url('../images/placeholder/trailerBtn.png');
   background-size: contain;
   background-repeat: no-repeat;
   border: none;
