--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,7 +1,10 @@
 <section class="pagination-section">
     <h2 class="visually-hidden">pagination</h2>
     <button class="page-btn prev">
-      <img src="./images/arrow-left.svg" class="arrow prev" alt="arrow prev" />
+      <svg class="arrow prev">
+        <use href="./images/sprite/symbol-defs.svg#icon-arrow-left2"></use>
+      </svg>
+      <!-- <img src="./images/sprite/symbol-defs.svg#icon-key" class="arrow prev" alt="arrow prev" /> -->
     </button>
     <ul class="pagination-btns">
       <li class="page is-hidden">1</li>
@@ -15,6 +18,8 @@
       <li class="page">20</li>
     </ul>
     <button class="page-btn next">
-      <img src="./images/arrow-left.svg" class="arrow next" alt="arrow next" />
+      <svg class="arrow next">
+        <use href="./images/sprite/symbol-defs.svg#icon-arrow-left2"></use>
+      </svg>
     </button>
 </section>
