--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -43,21 +43,33 @@
 	transform: none;
 }
 .page-btn{
-	cursor: pointer;
 	padding: 12px;
-	border: none;
-	border-radius: 5px;
-	background-color: rgba(247, 247, 247, 1);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 20%;
+	box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+	cursor: pointer;
+	border: 1px solid var(--secondary-text-color);
+	background-color: var(--just-white);
+	color: var(--secondary-text-color);
+	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	margin-left: 10px;
 }
 .page-btn:hover {
-	background-color: rgb(230, 230, 230);
+	background-color: var(--secondary-text-color);
+	color: var(--just-white);
 }
 .is-hidden {
 	display: none;
 }
 .arrow {
-	width: 16px;
+	display: inline-block;
+	width: 1.5em;
+	height: 1.5em;
+	stroke-width: 0;
+	stroke: currentColor;
+	fill: currentColor;
 }
 .arrow.next {
 	transform: rotate(180deg);
