--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -46,8 +46,8 @@
         </nav>
         <button id="toggle-theme-btn" class="toggle-theme-btn">
           <svg width="28px" height="28px">
-            <use class="moon" id="toggle-theme-image" href="./images/icons.svg#moon"></use>
-            <use class="sun" id="toggle-theme-image" href="./images/icons.svg#sun"></use>
+            <use class="moon" id="toggle-theme-image" href="./images/sprite/symbol-defs.svg#icon-moon-fill"></use>
+            <use class="sun" id="toggle-theme-image" href="./images/sprite/symbol-defs.svg#icon-sun-o"></use>
           </svg>
           <span class="visually-hidden">theme</span>
         </button>
