--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -343,7 +343,7 @@
   text-align: center;
 }
 #toggle-theme-image {
-  fill: var(--sun-color, #ffffff);
+  fill: var(--sun-color);
   width: 22px;
   height: 22px;
 }
