--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -29,7 +29,7 @@
                 </svg>
                 LOG IN</a>
             <li class="header__item">
-              <a class="header__link current-link" href="./index.html" id="header-home">
+              <a class="header__link home current-link" href="./index.html" id="header-home">
                 <svg class="header__nav_icon" width="10" height="10">
                   <use href="./images/sprite/symbol-defs.svg#icon-home3"></use>
                 </svg>
