--- a/src/partials/libCatalog.html
+++ b/src/partials/libCatalog.html
@@ -1,4 +1,4 @@
-<section class="catalog section container">
+<section class="catalog section lib_section container">
 <h1 class="visually-hidden">libCatalog</h1>
   <ul class="poster-lib  list-empty">
     <li class="poster-lib__item">
