--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -15,7 +15,7 @@
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__item">
-              <a class="header__link" href="./index.html" id="header-home"
+              <a class="header__link home" href="./index.html" id="header-home"
                 >
                 <svg class="header__nav_icon" width="10" height="10">
                   <use href="./images/sprite/symbol-defs.svg#icon-home3"></use>
