--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -4,6 +4,9 @@
     background-color: var(--light-body-theme);
   }
 }
+.lib_section {
+  min-height: 100vh;
+}
 .poster-list__img,
 .poster-lib__img {
   border-radius: inherit;
@@ -201,10 +204,6 @@
   letter-spacing: 0.02em;
   text-align: center;
   margin-bottom: 21px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
-    transform: scale(1.05);
-  }
 }
 .to_main__icon {
   fill: currentColor;
@@ -237,40 +236,28 @@
 }
 //placeholder
 .list-empty {
-  margin: 25px auto;
   position: relative;
   width: auto;
-  height: 60vh;
-  background-size: cover;
-  background-position: center;
-  background-image: url('../images/placeholder/maxresdefault.jpg');
+  height: 70vh;
   &__shild {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #000000;
-    color: #909090;
+    background-color: var(--primary-text-color);
     padding: 3vw;
     font-size: 1vw;
     text-align: center;
     min-width: 270px;
-    border: 10px solid var(--primary-current-color);
+    border: 4px solid var(--primary-current-color);
+    border-radius: 5px;
   }
   &__title {
     margin: 15px;
     font-size: 2vw;
-    color: #ffffff;
+    color: var(--just-white);
   }
-}
-.blink {
-  animation: blink 1s linear infinite;
-}
-@keyframes blink {
-  from {
-    opacity: 1; /* Непрозрачный текст */
-  }
-  to {
-    opacity: 0.7; /* Прозрачный текст */
+  &__text {
+    color: var(--just-white);
   }
 }
